@@ -1,5 +1,11 @@
 2008-01-26  Wakaba  <wakaba@suika.fam.cx>
 
+	* css-font.dat: New test file.
+
+	* CSS-Parser-1.dat: |css-font.dat| is added.
+
+2008-01-26  Wakaba  <wakaba@suika.fam.cx>
+
 	* css-visual.dat: Test data for 'padding', 'margin',
 	and 'border' related shorthands are added.
 
