@@ -1,5 +1,10 @@
 2008-01-26  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm (font serialize_shorthand): Implemented.
+	($generic_font_keywords): Typo fixed.
+
+2008-01-26  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm: Return value of |serialize_multiple| methods
 	are changed.
 	('margin' serialize_multiple, 'padding' serialize_multiple):
